fix: vertically aligned slider to track.

--- a/src/popup/styles/Switch.css
+++ b/src/popup/styles/Switch.css
@@ -12,7 +12,7 @@
   width: 40px;
   height: 20px;
   background: #3b3e45;
-  border: 2px solid #ACB0B8;
+  border: 2px solid #d6d8dc;
   border-radius: 100px;
   position: relative;
   transition: 0.3s;
@@ -21,13 +21,12 @@
 .switch-track .switch-slider {
   content: "";
   position: absolute;
-  top: 2px;
   left: 2px;
-  width: 12px;
-  height: 12px;
+  width: 13px;
+  height: 13px;
   border-radius: 14px;
   transition: 0.3s;
-  background-color: #ACB0B8;
+  background-color: #d6d8dc;
 }
 
 .toggle-switch:checked + .switch-track .switch-slider {
@@ -38,5 +37,4 @@
 
 .toggle-switch:checked + .switch-track {
   background-color: #d6d8dc;
-  border: 2px solid #d6d8dc;
 }
